GitVersion1/objects/User__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instance_Id_E2E__c</fullName>
        <formula>$Label.E2E_Cargill18_Insatnce_ID</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Instance Id E2E</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <label>License Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Chatter External</fullName>
                </value>
                <value>
                    <fullName>Chatter Free</fullName>
                </value>
                <value>
                    <fullName>Company Communities</fullName>
                </value>
                <value>
                    <fullName>Customer Community</fullName>
                </value>
                <value>
                    <fullName>Customer Community Plus</fullName>
                </value>
                <value>
                    <fullName>Force.com - App Subscription</fullName>
                </value>
                <value>
                    <fullName>Force.com Full Sandbox</fullName>
                </value>
                <value>
                    <fullName>Guest User License</fullName>
                </value>
                <value>
                    <fullName>I2V</fullName>
                </value>
                <value>
                    <fullName>Sales Cloud</fullName>
                </value>
                <value>
                    <fullName>Sales Cloud Full Sandbox</fullName>
                </value>
                <value>
                    <fullName>Sales Cloud Platform</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <label>Profile Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAML_Federation_ID__c</fullName>
        <label>SAML Federation ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>userid__c</fullName>
        <label>userid</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>User</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>